# pulumi-garage

./: .ci-mgmt.yaml  .commitlintrc.js  .editorconfig  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  AGENT.md  CLAUDE.local.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  docker-compose.e2e.yml  docker-compose.yml  go.mod  go.sum
.config/: mise.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature.yml
.github/workflows/: _reusable-e2e.yaml  issue_comment.command-dispatch.yaml  merge_group,pull_request,push.ci.yaml  merge_group,pull_request,push.e2e-garage-2.0.yaml  push.build.yaml  (+18 more)
examples/: base_test.go  go_test.go  yaml_test.go
provider/: bucket_key_permission_resource.go  bucket_key_permission_resource_test.go  bucket_resource.go  bucket_resource_test.go  config.go  config_test.go  key_resource.go  key_resource_test.go  provider.go
scripts/: bootstrap-garage.sh  ensure-dev-key.sh  get-versions.sh  sign-windows-binary.sh
sdk/python/: pyproject.toml
sdk/python/pulumi_garage/: __init__.py  _inputs.py  _utilities.py  bucket.py  bucket_key_permission.py  key.py  outputs.py  provider.py
sdk/python/pulumi_garage/config/: __init__.pyi  vars.py
sdk/python/pulumi_provider_boilerplate/: __init__.py  _utilities.py  provider.py  random.py  random_component.py
sdk/python/pulumi_provider_boilerplate/config/: __init__.py  __init__.pyi  vars.py
(+109 files in other folders)
