[project]
  name = "pulumi_garage"
  description = "A Pulumi provider to manage Garage S3-compatible object storage."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["garage", "s3", "object-storage", "self-hosted"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/axnic/pulumi-garage"
    Repository = "https://github.com/axnic/pulumi-garage"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_garage = ["py.typed", "pulumi-plugin.json"]
